--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>This is my personal homepage.</p>
     <img src="images/YouAndMe.jpg" alt="YouAndMe">
     <video controls>
-        <source src="videos/Space.avi" type="video/mp4">
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=7nm5CyaxHWA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         Your browser does not support the video tag.
     </video>
 </body>
