--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <h1>Welcome to My Homepage</h1>
     <p>This is my personal homepage.</p>
     <img src="images/YouAndMe.jpg" alt="YouAndMe">
-    <video controls>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=7nm5CyaxHWA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        Your browser does not support the video tag.
-    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7nm5CyaxHWA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
