--- a/index.html
+++ b/index.html
@@ -358,10 +358,13 @@ img.icon {
 .page-header-icon-with-cover {
 	margin-top: -0.72em;
 	margin-left: 0.07em;
+
 }
 
 .page-header-icon img {
 	border-radius: 3px;
+	width: 150px; /* 修改宽度 */
+    height: 150px; /* 修改高度 */
 }
 
 .link-to-page {
